complete-todo-list-item

--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -22,6 +22,7 @@
 	<script src="get-todo-list.js"></script>
 	<script src="save-todo-list.js"></script>
 	<script src="add-todo-list-item.js"></script>
+	<script src="complete-todo-list-item.js"></script>
 	
 	<!-- Entities -->
 	<script src="../lib/frameworks/jquery.js"></script>
