edit-todo-list-item

--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -23,6 +23,7 @@
 	<script src="save-todo-list.js"></script>
 	<script src="add-todo-list-item.js"></script>
 	<script src="complete-todo-list-item.js"></script>
+	<script src="edit-todo-list-item.js"></script>
 	
 	<!-- Entities -->
 	<script src="../lib/frameworks/jquery.js"></script>
