filter-todo-list

--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -24,6 +24,7 @@
 	<script src="add-todo-list-item.js"></script>
 	<script src="complete-todo-list-item.js"></script>
 	<script src="edit-todo-list-item.js"></script>
+	<script src="filter-todo-list.js"></script>
 	
 	<!-- Entities -->
 	<script src="../lib/frameworks/jquery.js"></script>
