--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -8,7 +8,7 @@
 	<script src="../lib/app/app.js"></script>
 	<script src="main.js"></script>
 	
-	<!-- Views -->
+	<!-- View code -->
 	<script src="../lib/view/mustache.js"></script>
 	<script src="../lib/view/i-view.js"></script>
 	<script src="../lib/view/i-view-data.js"></script>
