--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -34,6 +34,7 @@
 	<script src="../lib/collection/list.js"></script>
 	<script src="entities/todo-list.js"></script>
 	<script src="entities/todo-list-item.js"></script>
+	<script src="entities/todo-list-storage-adapter.js"></script>
 	
 </head>
 <body>
