Added comment to index file

--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -36,6 +36,7 @@
 	<script src="entities/todo-list-item.js"></script>
 	<script src="entities/todo-list-storage-adapter.js"></script>
 	
+	<!-- Adding comment -->
 </head>
 <body>
 	<div id="todo-app"></div>
